octave2.9 (2.9.5-8) unstable; urgency=low

  NOT YET RELEASED!

  [ Rafael Laboissiere ]
  * debian/control: Bumped Standards-Version to 3.7.0 (no changes needed)

 --

octave2.9 (2.9.5-7) unstable; urgency=low

  [ Thomas Weber ]
  * debian/patches/50_system_doc-2.9.dpatch: adapt the example in the
    documentation for the new output order of system()

  [ Rafael Laboissiere ]
  * Install doc files BUGS, SENDING-PATCHES, and THANKS
  * debian/in/octave*-watch: Fixed URLs

 -- Rafael Laboissiere <rafael@debian.org>  Wed, 26 Apr 2006 18:46:07 +0200

octave2.9 (2.9.5-6) unstable; urgency=low

  * debian/in/control: Build-depends on libufsparse-dev incon the 2.9 branch

 -- Rafael Laboissiere <rafael@debian.org>  Mon, 24 Apr 2006 14:34:29 +0200

octave2.9 (2.9.5-5) unstable; urgency=low

  [ Thomas Weber ]
  * debian/patches/50_fix-apiversion-2.9.dpatch: restore api
    versioned directories
  * debian/rules: introduce octave-config2.X symlink in preparation of
    dual built packages for Octave 2.1 and 2.9
  * debian/in/control: remove dependency on octave2.0 for -emacsen package

 -- Rafael Laboissiere <rafael@debian.org>  Thu, 20 Apr 2006 11:36:14 +0200

octave2.9 (2.9.5-4) unstable; urgency=low

  * debian/in/control: Conflicts with octave-forge (closes: #362591)

 -- Rafael Laboissiere <rafael@debian.org>  Sat, 15 Apr 2006 00:13:27 +0200

octave2.1 (1:2.1.73-7) unstable; urgency=low

  * debian/in/PACKAGE-htmldoc.doc-base.lib: Fixed path for HTML files.
    Really closes Bug #362251.
  * debian/patches/50_return-deffn.dpatch: Added patch, whcih completely
    closes Bug #361705.

 -- Rafael Laboissiere <rafael@debian.org>  Fri, 14 Apr 2006 19:44:42 +0200

octave2.1 (1:2.1.73-6) unstable; urgency=low

  * debian/in/PACKAGE-htmldoc.doc-base.*: Fixed path for documentation
    files (closes: #362251)
  * debian/in/control: Removed build-dependency on slice, which was only
    needed for processing he files above
