@@ -4,6 +4,11 @@ octave2.9 (2.9.5-8) unstable; urgency=low
 
   [ Rafael Laboissiere ]
   * debian/control: Bumped Standards-Version to 3.7.0 (no changes needed)
+  
+  [ Thomas Weber ]
+  * debian/rules: Make parallel build possible and remove octave-config2.X
+    link -- it is not needed
+    defs.make: use api-versioned directory for m-files
 
  --
 
